infra/k8s/address-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: address-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: address
  template:
    metadata:
      labels:
        app: address
    spec:
      containers:
        - name: address
          # image: us.gcr.io/storm-wall-444412-i5/address
          image: waddprog/vwn_address
          # imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: address-srv
spec:
  selector:
    app: address
  ports:
    - name: address
      protocol: TCP
      port: 3000
      targetPort: 3000
