infra/k8s/address-posgres.db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: address-posgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: address-posgres
  template:
    metadata:
      labels:
        app: address-posgres
    spec:
      containers:
        - name: address-posgres
          image: 'postgres:12'
          resources:
            limits:
              memory: '512Mi'
              cpu: '500m'
            requests:
              memory: '256Mi'
              cpu: '250m'
          ports:
            - containerPort: 5432
      #     volumeMounts:
      #       - name: address-posgres-storage
      #         mountPath: /docker-entrypoint-initdb.d
      # volumes:
      #   - name: address-posgres-storage
      #     configMap:
      #       name: address-posgres-config
---
apiVersion: v1
kind: Service
metadata:
  name: address-posgres-srv
spec:
  selector:
    app: address-posgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432

# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: address-posgres-config
# data:
#   init.sql: |
#     CREATE TABLE countries (
#       id SERIAL PRIMARY KEY,
#       name VARCHAR(255) NOT NULL, 
#       initials VARCHAR(3) NOT NULL,
#       flag VARCHAR(1) NOT NULL
#     );
#     CREATE TABLE states (
#       id SERIAL PRIMARY KEY,
#       name VARCHAR(255) NOT NULL, 
#       initials VARCHAR(3) NOT NULL,
#       country_id INT NOT NULL,
#       FOREIGN KEY (country_id) REFERENCES countries(id)
#     );
#     CREATE TABLE cities (
#       id SERIAL PRIMARY KEY,
#       name VARCHAR(255) NOT NULL, 
#       initials VARCHAR(3) NOT NULL,
#       state_id INT NOT NULL,
#       FOREIGN KEY (state_id) REFERENCES states(id)
#     );
#     CREATE TABLE users (
#       id SERIAL PRIMARY KEY,
#       first_name VARCHAR(100) NOT NULL,
#       last_name VARCHAR(100) NOT NULL,
#       city_id INT NULL,
#       FOREIGN KEY (city_id) REFERENCES cities(id)
#     );
