infra/k8s/connection-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connection-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connection
  template:
    metadata:
      labels:
        app: connection
    spec:
      containers:
        - name: connection
          # image: us.gcr.io/storm-wall-444412-i5/connection
          image: waddprog/vwn_connection
          # imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: connection-srv
spec:
  selector:
    app: connection
  ports:
    - name: connection
      protocol: TCP
      port: 3000
      targetPort: 3000
