infra/k8s/post-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
        - name: post
          # image: us.gcr.io/storm-wall-444412-i5/post
          image: waddprog/vwn_post
          # imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: post-srv
spec:
  selector:
    app: post
  ports:
    - name: post
      protocol: TCP
      port: 3000
      targetPort: 3000
