infra/k8s/post-posgres.db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-posgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-posgres
  template:
    metadata:
      labels:
        app: post-posgres
    spec:
      containers:
        - name: post-posgres
          image: 'postgres:12'
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: post-posgres-srv
spec:
  selector:
    app: post-posgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
